# SIMA_Project_Streamlit

./: Estructura de datos.ipynb  MA2003B_R_AVGDays.ipynb  MA2003B_R_SIMA.ipynb  MA2003B_R_regression_analysis.ipynb  README.md  Reto.ipynb  SIMA_Model.ipynb  aaa.py  fuzzy_air_classifier.py  limpieza-3.ipynb  manova.py  monterrey_air.py  pyproject.toml  requirements.txt  test_monterrey.py
.devcontainer/: devcontainer.json
Bases_Datos/: DATOS HISTÓRICOS 2025_TODAS ESTACIONES.xlsx  Datos2022-2023.xlsx  Datos2023-2024.xlsx  ~$DATOS HISTÓRICOS 2020_2021_TODAS ESTACIONES.xlsx  ~$DATOS HISTÓRICOS 2022_2023_TODAS ESTACIONES.xlsx
Boxplots/: ReadMe
manova_outputs/: anova_univariate.csv  manova_multivariate.txt  tukey_CO.csv  tukey_NO.csv  tukey_NO2.csv  tukey_NOX.csv  tukey_O3.csv  tukey_PM10.csv  tukey_PM25.csv  tukey_SO2.csv
models/: evening_peak_kmeans.pkl  evening_peak_pca.pkl  evening_peak_scaler.pkl  midday_kmeans.pkl  midday_pca.pkl  midday_scaler.pkl  morning_peak_kmeans.pkl  morning_peak_pca.pkl  morning_peak_scaler.pkl  night_kmeans.pkl  night_pca.pkl  night_scaler.pkl
src/F2020.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
