# pyproject.toml
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "F2020"
version = "0.1.0"
description = "Paquete de apoyo para el curso F2020 Ecuaciones Diferenciales para la Física"
authors = [
  { name = "Raul Gomez", email = "rgomez@tec.mx" }
]
dependencies = [
  "numpy",
  "matplotlib",
  "pyqt6",
  "scipy",
  "pandas",
]

[project.scripts]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

